--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/EV_JOHNS_Logo_icon.png" rel="icon">
+    <!-- <link href="img/EV_JOHNS_Logo_icon.png" rel="icon"> -->
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -70,7 +70,7 @@
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
-        <img class="position-absolute top-50 start-50 translate-middle" src="img/EV_JOHNS_Logo_icon.png" width="50px " alt="Icon">
+         <img class="position-absolute top-50 start-50 translate-middle" src="img/EV_JOHNS_Logo_icon.png" width="50px " alt="Icon">
     </div>
     <!-- Spinner End -->
 
@@ -140,7 +140,7 @@
         </div>
         <!-- Logo for mobile view, shown in the center -->
         <a href="index.html" class="navbar-brand mx-auto d-lg-none">
-            <h1 class="text-primary m-0"><img class="me-3" src="img/EV_JOHNS_Logo.png" width="100px" alt="Icon"></h1>
+            <!-- <h1 class="text-primary m-0"><img class="me-3" src="img/EV_JOHNS_Logo.png" width="100px" alt="Icon"></h1> -->
         </a>
         <!-- Toggler Button -->
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
