--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <div class="owl-carousel-inner">
                                     <div class="container">
                                         <div class="row justify-content-start">
-                                            <div class="col-10 col-lg-8">
+                                            <div class="col-10 col-lg-8" style="margin-top:100px !important">
                                                 <h1 class="display-1 text-white animated slideInDown">Best Architecture And Interior Design Services</h1>
                                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">we design more than just spaces; we create experiences. Whether it's a cozy home, a dynamic office, or a vibrant commercial space, our mission is to bring elegance and functionality together.</p>
                                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
@@ -152,7 +152,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown">Best Architecture And Interior Design Services</h1>
+                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Best Architecture And Interior Design Services</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Every project we undertake is a journey to transform your vision into a masterpiece. Let’s craft spaces that inspire and resonate with your unique style.
                                 </p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
@@ -167,7 +167,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown">Best Architecture And Interior Design Services</h1>
+                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Best Architecture And Interior Design Services</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">To redefine interior spaces with designs that combine aesthetics, functionality, and comfort.
                                     .</p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
