--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                                     <div class="container">
                                         <div class="row justify-content-start">
                                             <div class="col-10 col-lg-8" style="margin-top:100px !important">
-                                                <h1 class="display-1 text-white animated slideInDown">Best Architecture And Interior Design Services</h1>
-                                                <p class="fs-5 fw-medium text-white mb-4 pb-3">we design more than just spaces; we create experiences. Whether it's a cozy home, a dynamic office, or a vibrant commercial space, our mission is to bring elegance and functionality together.</p>
+                                                <h1 class="display-1 text-white animated slideInDown">Best  Interior Designing Services</h1>
+                                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Bring your Own Dreams into your Own Rooms.</p>
                                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
                                             </div>
                                         </div>
@@ -152,7 +152,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Best Architecture And Interior Design Services</h1>
+                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Best Interior Designing Services</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Every project we undertake is a journey to transform your vision into a masterpiece. Let’s craft spaces that inspire and resonate with your unique style.
                                 </p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
@@ -167,7 +167,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Best Architecture And Interior Design Services</h1>
+                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Best Interior Designing Services</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">To redefine interior spaces with designs that combine aesthetics, functionality, and comfort.
                                     .</p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
@@ -230,7 +230,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h4 class="section-title">About Us</h4>
-                    <h1 class="display-5 mb-4">A Creative Architecture Agency For Your Dream Home</h1>
+                    <h1 class="display-5 mb-4">A Creative Interior Designing Agency For Your Dream Home</h1>
                     <p> Agora Interior is where creativity meets precision. Our team of expert designers and craftsmen work passionately to turn your interior dreams into reality. From chic modern designs to timeless classics, we specialize in delivering tailor-made solutions that reflect your personality and needs.
 
                         Founded on the principles of innovation, quality, and customer satisfaction, we take pride in designing interiors that not only look beautiful but also serve their purpose efficiently..</p>
@@ -258,7 +258,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h4 class="section-title">Our Services</h4>
-                <h1 class="display-5 mb-4">We Focused On Modern Architecture And Interior Design</h1>
+                <h1 class="display-5 mb-4">We Focused On Modern  Interior Designs</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -266,8 +266,8 @@
                         <img class="bg-img" src="img/service-1.jpg" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-5.png" alt="Icon">
-                            <h3 class="mb-3">Architecture</h3>
-                            <p class="mb-4">Professional architecture services for innovative, sustainable, and functional construction solutions</p>
+                            <h3 class="mb-3">Interior Designing & 3D Visualization </h3>
+                            <p class="mb-4">Professional Interior Designing services for innovative, sustainable, and functional construction solutions</p>
                             <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
@@ -299,8 +299,8 @@
                         <img class="bg-img" src="img/service-4.jpg" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-8.png" alt="Icon">
-                            <h3 class="mb-3">Interior Design</h3>
-                            <p class="mb-4">Transforming spaces with expert interior design services, tailored for luxury and functionality in every construction project.</p>
+                            <h3 class="mb-3">CCTV and Networking system</h3>
+                            <p class="mb-4">Transforming spaces with expert interior design services, tailored for luxury and functionality in every construction project and providning security system for the best security experience.</p>
                             <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
@@ -310,8 +310,8 @@
                         <img class="bg-img" src="img/service-5.jpg" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-9.png" alt="Icon">
-                            <h3 class="mb-3">Renovation</h3>
-                            <p class="mb-4">Professional renovation services transforming spaces with precision, quality, and timely execution for a flawless upgrade.</p>
+                            <h3 class="mb-3">Painting and Polish Works</h3>
+                            <p class="mb-4">Professional renovation services transforming spaces with precision, quality, and timely execution for a flawless upgrade with best polishing works.</p>
                             <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
@@ -321,8 +321,8 @@
                         <img class="bg-img" src="img/service-6.jpg" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-10.png" alt="Icon">
-                            <h3 class="mb-3">Construction</h3>
-                            <p class="mb-4">professional construction services delivering quality, reliability, and precision for all your building needs.</p>
+                            <h3 class="mb-3">Electrical & Plumbing Works</h3>
+                            <p class="mb-4">professional  Electrical & Plumbing  services delivering quality, reliability, and precision for all your building needs.</p>
                             <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
@@ -418,7 +418,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h1 class="mb-3">7 Years Of Experience In Architecture Industry</h1>
+                                    <h1 class="mb-3">7 Years Of Experience In Interior Design Industry</h1>
                                     <p class="mb-4">Transform your hotel reception into a welcoming masterpiece with Agora Interior. Combining elegance and functionality, we create inviting spaces that leave lasting impressions</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Design Approach</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Innovative Solutions</p>
@@ -436,7 +436,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h1 class="mb-3">25 Years Of Experience In Architecture Industry</h1>
+                                    <h1 class="mb-3">25 Years Of Experience In Interior Designing Industry</h1>
                                     <p class="mb-4">At Agora Interior, we design kitchens that blend style and efficiency. From modern modular setups to timeless designs, our spaces are crafted for seamless functionality and culinary inspiration</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Design Approach</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Innovative Solutions</p>
@@ -454,7 +454,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h1 class="mb-3">25 Years Of Experience In Architecture Industry</h1>
+                                    <h1 class="mb-3">25 Years Of Experience In Interior designing Industry</h1>
                                     <p class="mb-4">Agora Interior crafts exquisite jewellery store interiors that reflect luxury and elegance. We create sophisticated displays and layouts that highlight your collections, offering customers a memorable shopping experience</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Design Approach</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Innovative Solutions</p>
@@ -472,7 +472,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h1 class="mb-3">25 Years Of Experience In Architecture Industry</h1>
+                                    <h1 class="mb-3">25 Years Of Experience interior designing Industry</h1>
                                     <p class="mb-4">Agora Interior designs bedrooms that are serene, stylish, and tailored for comfort. We create personalized spaces that combine functionality with a touch of luxury, ensuring your ultimate relaxation.</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Design Approach</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Innovative Solutions</p>
@@ -644,7 +644,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
+    <!-- <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h4 class="section-title">Testimonial</h4>
@@ -668,7 +668,7 @@
                 </div>
             </div>      
         </div>
-    </div>
+    </div> -->
     <!-- Testimonial End -->
 
 
@@ -690,11 +690,10 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Services</h3>
-                    <a class="btn btn-link" href="">Architecture</a>
-                    <a class="btn btn-link" href="">3D Animation</a>
+                    
                     <a class="btn btn-link" href="">House Planning</a>
                     <a class="btn btn-link" href="">Interior Design</a>
-                    <a class="btn btn-link" href="">Construction</a>
+                    
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Quick Links</h3>
