--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
             </div> -->
         </div>
         <a href="index.html" class="navbar-brand mx-auto d-none d-lg-block">
-            <h1 class="text-info" style="font-family:'Times New Roman', Times, serif;"><img src="/img/logo.png" alt="" style="height: 80px;width: 170px;">Agora Interior</h1>
+            <h1 class="text-info" style="font-family:'Times New Roman', Times, serif;"><img src="/img/agora logo cut.png" alt="" style="height: 80px;width: 170px;"></h1>
                  <!-- <h1 class="text-info m-0" style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;">AGORA INTERIOR</h1> -->
              </a>
         <!-- Logo for mobile view, shown in the center -->
         <a href="index.html" class="navbar-brand mx-auto d-lg-none">
 
-            <h1 class="text-info" style="font-family"><img src="/img/logo.png" alt="" style="height: 40px;width: 130px;">Agora Interior</h1>
+            <h1 class="text-info" style="font-family"><img src="/img/agora logo cut.png" alt="" style="height: 40px;width: 130px;"></h1>
             <!-- <h1 class="text-info m-0" style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;">AGORA INTERIOR</h1> -->
         </a>
         </a>
@@ -538,7 +538,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/bedRoom/Moksha ayurvedic clinic First floor Reception B.jpg" alt="">
+                            <img class="img-fluid" src="img/bedRoom/Hotel Joyees Reception.jpg" alt="">
                             <!-- <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
