--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
             </div> -->
         </div>
         <a href="index.html" class="navbar-brand mx-auto d-none d-lg-block">
-            <h1 class="text-info" style="font-family:'Times New Roman', Times, serif;"><img src="/img/agora logo cut.png" alt="" style="height: 80px;width: 170px;"></h1>
+            <h1 class="text-info" style="font-family:'Times New Roman', Times, serif;"><img src="/img/agora logo cut.png" alt="" style="height: 80px;width: 100px;"></h1>
                  <!-- <h1 class="text-info m-0" style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;">AGORA INTERIOR</h1> -->
              </a>
         <!-- Logo for mobile view, shown in the center -->
         <a href="index.html" class="navbar-brand mx-auto d-lg-none">
 
-            <h1 class="text-info" style="font-family"><img src="/img/agora logo cut.png" alt="" style="height: 40px;width: 130px;"></h1>
+            <h1 class="text-info" style="font-family"><img src="/img/agora logo cut.png" alt="" style="height:40px;width:80px;"></h1>
             <!-- <h1 class="text-info m-0" style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;">AGORA INTERIOR</h1> -->
         </a>
         </a>
@@ -130,7 +130,7 @@
                     Your browser does not support the video tag.
                 </video> 
                                 -->
-                                <img class="img-fluid" src="img/bedRoom/Rajendran cheruthuruthy FF-Bedroom-1 view 1 .jpg" alt="">
+                                <img class="img-fluid" src="img/RECEPTION/RECEPTION/Moksha ayurvedic clinic First floor Reception B.jpg" alt="">
                                 <div class="owl-carousel-inner">
                                     <div class="container">
                                         <div class="row justify-content-start">
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-2.jpg'>">
-                <img class="img-fluid" src="img/bedRoom/Master bed View 3.jpg" alt="">
+                <img class="img-fluid" src="img/bedRoom/M.Bedroom view 1-B .jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -223,7 +223,10 @@
     </div>
     <!-- Facts End -->
 
+<style>
+  
 
+</style>
     <!-- About Start -->
     <div class="container-xxl py-5" id="about">
         <div class="container">
@@ -234,10 +237,13 @@
                         <img class="img-fluid" src="img/bedRoom/View 01 Aji daniel puthur bedroom .jpg" alt="">
                     </div>
                 </div>
+                
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h4 class="section-title">About Us</h4>
                     <h1 class="display-5 mb-4">A Creative Interior Designing Agency For Your Dream Home</h1>
-                    <p> Agora Interior is where creativity meets precision. Our team of expert designers and craftsmen work passionately to turn your interior dreams into reality. From chic modern designs to timeless classics, we specialize in delivering tailor-made solutions that reflect your personality and needs.
+                    <p> Agora Interior is where creativity meets precision. Our team of expert designers and craftsmen work passionately to turn your interior dreams into reality. From chic modern designs to timeless classics, we specialize in delivering tailor-made solutions that reflect your personality and needs.We work across residential, commercial,
+                        hospitality, and retail projects, creating bespoke
+                        spaces that enrich the human experience.
 
                         Founded on the principles of innovation, quality, and customer satisfaction, we take pride in designing interiors that not only look beautiful but also serve their purpose efficiently..</p>
                     <!-- <p class="mb-4">With a legacy of over three decades, our team of 500+ professionals transforms your dreams into reality, ensuring every detail is crafted to perfection.</p> -->
@@ -274,7 +280,7 @@
                             <img class="mb-4" src="img/icons/icon-5.png" alt="Icon">
                             <h3 class="mb-3">Interior Designing & 3D Visualization </h3>
                             <p class="mb-4">Professional Interior Designing services for innovative, sustainable, and functional construction solutions</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <!-- <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a> -->
                         </div>
                     </div>
                 </div>
@@ -304,10 +310,10 @@
                     <div class="service-item d-flex position-relative text-center h-100">
                         <img class="bg-img" src="img/service-4.jpg" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons/icon-8.png" alt="Icon">
+                            <img class="mb-4" src="img/icons/cctv.png" style="height: 100px;width: 100px;" alt="Icon">
                             <h3 class="mb-3">CCTV and Networking system</h3>
                             <p class="mb-4">Transforming spaces with expert interior design services, tailored for luxury and functionality in every construction project and providning security system for the best security experience.</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <!-- <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a> -->
                         </div>
                     </div>
                 </div>
@@ -318,7 +324,7 @@
                             <img class="mb-4" src="img/icons/icon-9.png" alt="Icon">
                             <h3 class="mb-3">Painting and Polish Works</h3>
                             <p class="mb-4">Professional renovation services transforming spaces with precision, quality, and timely execution for a flawless upgrade with best polishing works.</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <!-- <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a> -->
                         </div>
                     </div>
                 </div>
@@ -326,10 +332,10 @@
                     <div class="service-item d-flex position-relative text-center h-100">
                         <img class="bg-img" src="img/service-6.jpg" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons/icon-10.png" alt="Icon">
+                            <img class="mb-4" src="img/icons/electrcal.png" style="height: 100px;width: 100px;" alt="Icon">
                             <h3 class="mb-3">Electrical & Plumbing Works</h3>
                             <p class="mb-4">professional  Electrical & Plumbing  services delivering quality, reliability, and precision for all your building needs.</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <!-- <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a> -->
                         </div>
                     </div>
                 </div>
@@ -346,7 +352,15 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h4 class="section-title">Why Choose Us!</h4>
                     <h1 class="display-5 mb-4">Why You Should Trust Us? Learn More About Us!</h1>
-                    <p class="mb-4">At Agora Interior, we don't just design spaces; we create lifestyles. Our journey began with a simple yet profound idea: to bring joy and functionality into every corner of your space.</p>
+                    <p class="mb-4">The AGORA Interiors is a professional interior company,
+                        specialized in high quality interior design, launched in
+                        2017 at Palarivattom, Cochin. And then other branch at
+                        Sullivan street, Coimbatore in 2019, Today we have a
+                        modular furniture factory with highly advanced
+                        machineries.
+                        Our products are manufactured by our team of skilled
+                        workers using high quality materials. So we can guarantee
+                        customer satisfaction.</p>
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex align-items-start">
@@ -380,7 +394,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="feature-img">
                         <img class="img-fluid" src="img/bedRoom/VIEW 003 ROOM NO-105 HOTEL CORAL .jpg" alt="">
-                        <img class="img-fluid" src="img/bedRoom/Rajendran cheruthuruthy FF-Bedroom-1 view 2.jpg" alt="">
+                        <img class="img-fluid" src="img/bedRoom/M.Bedroom view 1-B .jpg" alt="">
                     </div>
                 </div>
             </div>
