--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-2.jpg'>">
-                <img class="img-fluid" src="img/bedRoom/M.Bedroom view 1-B .jpg" alt="">
+                <img class="img-fluid" src="img/bedRoom/M.Bedroom view 3 .jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -240,7 +240,7 @@
                 
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h4 class="section-title">About Us</h4>
-                    <h1 class="display-5 mb-4">A Creative Interior Designing Agency For Your Dream Home</h1>
+                    <h1 class="display-5 mb-4">Bring your Own Dreams into your own Rooms</h1>
                     <p> Agora Interior is where creativity meets precision. Our team of expert designers and craftsmen work passionately to turn your interior dreams into reality. From chic modern designs to timeless classics, we specialize in delivering tailor-made solutions that reflect your personality and needs.We work across residential, commercial,
                         hospitality, and retail projects, creating bespoke
                         spaces that enrich the human experience.
