--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
                     Your browser does not support the video tag.
                 </video> 
                                 -->
-                                <img class="img-fluid" src="img/DINING & LIVING/Dining, Kitchen , breakfast View 3 arangott .jpg" alt="">
+                                <img class="img-fluid" src="img/DINING & LIVING/Family living , Dining View 1 arangott .jpg" alt="">
                                 <div class="owl-carousel-inner">
                                     <div class="container">
                                         <div class="row justify-content-start">
                                             <div class="col-10 col-lg-8" style="margin-top:100px !important">
-                                                <h1 class="display-1 text-white animated slideInDown">Best  Interior Designing Services</h1>
+                                                <h1 class="display-1 text-white animated slideInDown">Bring your Own Dreams into your own Rooms</h1>
                                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Bring your Own Dreams into your Own Rooms.</p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
 
