--- a/gallery.html
+++ b/gallery.html
@@ -388,7 +388,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                <!-- <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
                             <img class="img-fluid" src="img/KITCHEN/KITCHEN/Kitchen view 2 Ushas agora.jpg" alt="">
@@ -399,7 +399,7 @@
                             <!-- <span class="text-primary">Designation</span> -->
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -433,7 +433,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/RECEPTION//RECEPTION/Moksha ayurvedic clinic First floor Reception A.jpg" alt="">
+                            <img class="img-fluid" src="img/HOTEL & RESTAURANT/HOTEL & RESTAURANT/Restrnt 2.jpg" alt="">
                             <!-- <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
@@ -514,7 +514,7 @@
                             </div> -->
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">RECEPTION</h3>
+                            <h3 class="mt-2">HOTELS</h3>
                             <!-- <span class="text-primary">Designation</span> -->
                         </div>
                     </div>
@@ -530,7 +530,7 @@
                             </div> -->
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">RECEPTION</h3>
+                            <h3 class="mt-2">HOTELS</h3>
                             <!-- <span class="text-primary">Designation</span> -->
                         </div>
                     </div>
@@ -542,7 +542,7 @@
                             
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">RECEPTION</h3>
+                            <h3 class="mt-2">HOTELS</h3>
                             <!-- <span class="text-primary">Designation</span> -->
                         </div>
                     </div>
