--- a/index.html
+++ b/index.html
@@ -118,41 +118,29 @@
 </nav>
 <!-- Navbar End -->
 
+<!-- //img/DINING & LIVING/Family living , Dining View 1 arangott .jpg -->
+
 
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 pb-5 wow fadeIn" style="margin-top: -100px !important;" data-wow-delay="0.7s">
         <div class="owl-carousel header-carousel position-relative">
-            <div class="owl-carousel-item position-relative"  data-dot="<img src='img/carousel-2.jpg'>">
-                <!-- <img class="img-fluid" src="img/carousel-1.jpg" alt=""> -->
-                <!-- <video autoplay loop muted  style="object-fit:cover !important ;">
-                    <source src="img/evjhonsvideo.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video> 
-                                -->
-                                <img class="img-fluid" src="img/DINING & LIVING/Family living , Dining View 1 arangott .jpg" alt="">
-                                <div class="owl-carousel-inner">
-                                    <div class="container">
-                                        <div class="row justify-content-start">
-                                            <div class="col-10 col-lg-8" style="margin-top:100px !important">
-                                                <h1 class="display-1 text-white animated slideInDown">Bring your Own Dreams into your own Rooms</h1>
-                                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Bring your Own Dreams into your Own Rooms.</p>
-                                <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
-
-                                                <!-- <a href="https://api.whatsapp.com/send?phone=918606414384&text=Hai%20Anaz!!" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a> -->
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/DINING & LIVING/Family living , Dining View 1 arangott .jpg'>">
+                <img class="img-fluid" src="img/DINING & LIVING/Family living , Dining View 1 arangott .jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
-                           
+                            <div class="col-10 col-lg-8">
+                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Custom Furniture & Designs</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Your perfect blend of style and comfort awaits.
+                                </p>
+                                <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-2.jpg'>">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/bedRoom/M.Bedroom view 3 .jpg'>">
                 <img class="img-fluid" src="img/bedRoom/M.Bedroom view 3 .jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
@@ -167,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/bedRoom/VIEW 003 ROOM NO-105 HOTEL CORAL .jpg'>">
                 <img class="img-fluid" src="img/bedRoom/VIEW 003 ROOM NO-105 HOTEL CORAL .jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
